<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure"
    android:backgroundTint="#FDFBFB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E4E4F0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.8"
            android:background="#BEDAF0"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/profile"
            android:translationZ="8dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toTopOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:animateLayoutChanges="true"
            android:text="@string/dikembangkan_oleh"
            android:textColor="@color/primer1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/circleImageView"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:onClick="openInstagram"
            android:padding="16dp"
            android:text="@string/irfan_ali"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/header"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:onClick="openLinkedIn"
            android:padding="16dp"
            android:text="@string/ir_vanaly_gmail_com"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="openGitHub"
            android:padding="16dp"
            android:text="@string/sosmed"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageView
            android:id="@+id/instagram"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="#2F2929"
            android:contentDescription="@string/ig"
            android:src="@drawable/vector_instagram"
            app:layout_constraintStart_toEndOf="@+id/other"
            app:layout_constraintTop_toTopOf="@+id/other" />

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/ln"
            android:src="@drawable/vector_linkedin"
            app:layout_constraintStart_toEndOf="@+id/instagram"
            app:layout_constraintTop_toTopOf="@+id/other" />

        <ImageView
            android:id="@+id/github"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/gh"
            android:src="@drawable/vector_github"
            app:layout_constraintStart_toEndOf="@+id/linkedin"
            app:layout_constraintTop_toTopOf="@+id/other" />

        <TextView
            android:id="@+id/alasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/tentang_aplikasi"
            android:textColor="@color/primer1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/other" />

        <TextView
            android:id="@+id/isi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/perpustakaan_desa_saat_ini_merupakan_salah_satu_tonggak_ukur_keberhasilan_dalam_program_pembangunan_sumber_daya_manusia_melalui_porgram_transformasi_perpustakaan_berbasis_inklusi_sosial_maka_dikembangkanlah_banyak_sistem_yang_dapat_membantu_peran_perpustkaan_bagi_masyarakat_dengan_aplikasi_epusdesku_ini_mengenalkan_kepada_masyarakat_luas_daftar_perpustakaan_desa_di_kuningan"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alasan"
            tools:ignore="VisualLintLongText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
